# idsmith

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: node-publish.yml  python-ci.yml  python-publish.yml  release.yml
benchmarks/: README.md  bench_docs.rs  bench_idsmith.rs
bindings/node/: Cargo.toml  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/idsmith/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
docs/src/: SUMMARY.md  installation.md  introduction.md
docs/src/modules/: bank-account.md  company-id.md  driver-license.md  iban.md  passport.md  personal-id.md  tax-id.md
docs/src/node/: api-reference.md  quick-start.md
docs/src/python/: api-reference.md  quick-start.md
docs/src/rust/: api.md  cli.md  quick-start.md
scripts/: README.md  accuracy_check.py  accuracy_test.py  comprehensive_bench.js  comprehensive_bench.py
src/: countries.rs  csv.rs  iban.rs  lib.rs  main.rs
src/bank_account/: ar.rs  au.rs  br.rs  ca.rs  checksum.rs  cn.rs  gb.rs  generic.rs  hk.rs  iban_based.rs  in_.rs  jp.rs  kr.rs  mod.rs  mx.rs  ng.rs  nz.rs  sg.rs  us.rs  za.rs
src/company_id/: ad.rs  ae.rs  al.rs  ar.rs  at.rs  au.rs  ax.rs  az.rs  be.rs  bg.rs  br.rs  by.rs  ca.rs  ch.rs  cl.rs  cn.rs  co.rs  cr.rs  cu.rs  cy.rs  cz.rs  de.rs  dk.rs  do_.rs  dz.rs  ec.rs  ee.rs  eg.rs  es.rs  fi.rs  fo.rs  fr.rs  gb.rs  gh.rs  gn.rs  gr.rs  gt.rs  hk.rs  hr.rs  hu.rs  (+53 more)
src/credit_card/: mod.rs
src/driver_license/: mod.rs
src/iban/: checksum.rs  countries.rs  generate.rs  mod.rs  types.rs  util.rs
src/lei/: mod.rs
src/passport/: mod.rs
src/personal_id/: ar.rs  at.rs  au.rs  be.rs  bg.rs  br.rs  ca.rs  ch.rs  checksum.rs  cl.rs  cn.rs  co.rs  cu.rs  cz.rs  date.rs  de.rs  dk.rs  do_.rs  dz.rs  ec.rs  ee.rs  eg.rs  es.rs  fi.rs  fr.rs  gb.rs  generic.rs  gr.rs  hk.rs  hr.rs  id_.rs  ie.rs  il.rs  in_.rs  is_.rs  it.rs  jmbg.rs  jp.rs  kr.rs  kz.rs  (+24 more)
src/tax_id/: mod.rs
src/vat/: mod.rs
tests/: bank_account_tests.rs  company_id_tests.rs  credit_card_tests.rs  driver_license_tests.rs  iban_tests.rs  lei_tests.rs  passport_tests.rs  personal_id_tests.rs  tax_id_tests.rs  vat_tests.rs
