[package]
name = "idsmith"
version = "0.4.0"
edition = "2021"
authors = ["Tony Benoy <me@tonybenoy.com>"]
description = "Generate valid, checksum-correct IBANs, personal IDs, and bank accounts for 252 countries. Supports CPF, Aadhaar, CURP, SSN, PESEL, and 50+ more formats."
license = "MIT"
keywords = ["iban", "test-data", "generator", "personal-id", "faker"]
categories = ["command-line-utilities", "development-tools::testing"]
repository = "https://github.com/Sunyata-OU/idsmith"

[lib]
name = "idsmith"
path = "src/lib.rs"

[[bin]]
name = "idsmith"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
rand = "0.8"

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap", "csv"]
csv = []
