[package]
name = "idsmith"
version = "0.4.0"
edition = "2021"
authors = ["Tony Benoy <me@tonybenoy.com>"]
description = "Validate and generate checksum-correct IBANs, personal IDs, bank accounts, credit cards, SWIFT/BIC, company IDs, driver's licenses, tax IDs, and passports."
license = "MIT"
keywords = ["validator", "iban", "personal-id", "test-data", "generator"]
categories = ["development-tools::testing", "finance", "command-line-utilities", "value-formatting"]
repository = "https://github.com/Sunyata-OU/idsmith"

[workspace]
members = [".", "bindings/python", "bindings/node"]

[lib]
name = "idsmith"
path = "src/lib.rs"

[[bin]]
name = "idsmith"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "bench_idsmith"
path = "benchmarks/bench_idsmith.rs"

[[bin]]
name = "bench_docs"
path = "benchmarks/bench_docs.rs"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["clap", "csv", "json"]
csv = []
json = ["serde", "serde_json"]