[package]
name = "idsmith-node"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
idsmith = { path = "../..", default-features = false }
rand = "0.8"
napi = { version = "2", default-features = false, features = ["napi9"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
